// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`evaluateFhirDataServices tests Evaluate Encounter Care Team should return the correct Encounter care team 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "className": "caption-data-title margin-y-0",
    "jsonTableData": {
      "resultName": "Encounter Care Team",
      "tables": [
        [
          {
            "Dates": {
              "value": {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {
                  "children": "No data",
                  "className": "text-italic text-base",
                },
                "type": "span",
              },
            },
            "Name": {
              "value": {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {
                  "children": "No data",
                  "className": "text-italic text-base",
                },
                "type": "span",
              },
            },
            "Role": {
              "value": "attender",
            },
          },
        ],
      ],
    },
  },
  "type": [Function],
}
`;

exports[`evaluateFhirDataServices tests Evaluate Hospital Encounter Data A bundle with only Discharge Diagnosis returns that data and matches snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "caption": "Hospital Discharge Diagnosis",
          "columns": [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ],
          "resources": [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ],
        },
        "type": [Function],
      },
    },
  ],
  "unavailableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": undefined,
    },
  ],
}
`;

exports[`evaluateFhirDataServices tests Evaluate Hospital Encounter Data should return Hospital Encounter Data when present and match snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "caption": "Hospital Admission Diagnosis",
          "columns": [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ],
          "resources": [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ],
        },
        "type": [Function],
      },
    },
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "caption": "Hospital Discharge Diagnosis",
          "columns": [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ],
          "resources": [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ],
        },
        "type": [Function],
      },
    },
  ],
  "unavailableData": [],
}
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when all fields present 1`] = `
<div>
  <div
    class="display-flex"
  >
    <div
      class="margin-left-auto padding-top-1"
    >
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Expand all 
        employment details
      </button>
      <span
        class="vertical-line"
      />
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Collapse all 
        employment details
      </button>
    </div>
  </div>
  <div
    class="usa-accordion accordion-rr"
    data-allow-multiple="true"
    data-testid="accordion"
  >
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="12345-r:id-0"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_12345-r:id-0"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            class="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_12345-r:id-0"
      hidden=""
      id="12345-r:id-0"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Dates
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            01/04/2020 - Present
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Industry
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~industry~
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row flex-column"
        >
          <div
            class="data-title padding-right-1"
          >
            Workplace Information
          </div>
          <div
            class="grid-col width-full text-pre-line p-list"
          >
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Address
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  123 Test St
Nowhereville, KS
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Schedule
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~schedule~
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Hours
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~hours~
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Days
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~days~
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Duties
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~duties~
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Pay Grade
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~pay grade~
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Employment Type
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~employment type~
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Hazard
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~hazard~
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when multiple jobs and sort correctly 1`] = `
<div>
  <div
    class="display-flex"
  >
    <div
      class="margin-left-auto padding-top-1"
    >
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Expand all 
        employment details
      </button>
      <span
        class="vertical-line"
      />
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Collapse all 
        employment details
      </button>
    </div>
  </div>
  <div
    class="usa-accordion accordion-rr"
    data-allow-multiple="true"
    data-testid="accordion"
  >
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="12346-r:id-0"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_12346-r:id-0"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            class="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_12346-r:id-0"
      hidden=""
      id="12346-r:id-0"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Dates
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            01/04/2020 - Present
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Industry
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~industry~
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Workplace Information
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            <span
              class="text-italic text-base"
            >
              No data
            </span>
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Hazard
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~hazard~
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="12347-r:id-1"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_12347-r:id-1"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            class="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_12347-r:id-1"
      hidden=""
      id="12347-r:id-1"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Dates
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            01/04/2015 - Present
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Industry
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~industry~
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Workplace Information
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            <span
              class="text-italic text-base"
            >
              No data
            </span>
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Hazard
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~hazard~
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="12345-r:id-2"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_12345-r:id-2"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            class="font-size-xs text-base"
          >
            Past
             Employment
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_12345-r:id-2"
      hidden=""
      id="12345-r:id-2"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Dates
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            01/04/2018 - 01/04/2022
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Industry
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~industry~
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Workplace Information
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            <span
              class="text-italic text-base"
            >
              No data
            </span>
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Hazard
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~hazard~
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when no workplace info 1`] = `
<div>
  <div
    class="display-flex"
  >
    <div
      class="margin-left-auto padding-top-1"
    >
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Expand all 
        employment details
      </button>
      <span
        class="vertical-line"
      />
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Collapse all 
        employment details
      </button>
    </div>
  </div>
  <div
    class="usa-accordion accordion-rr"
    data-allow-multiple="true"
    data-testid="accordion"
  >
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="12345-r:id-0"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_12345-r:id-0"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            class="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_12345-r:id-0"
      hidden=""
      id="12345-r:id-0"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Dates
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            01/04/2020 - Present
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Industry
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~industry~
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Workplace Information
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            <span
              class="text-italic text-base"
            >
              No data
            </span>
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Hazard
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~hazard~
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when partial info 1`] = `
<div>
  <div
    class="display-flex"
  >
    <div
      class="margin-left-auto padding-top-1"
    >
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Expand all 
        employment details
      </button>
      <span
        class="vertical-line"
      />
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Collapse all 
        employment details
      </button>
    </div>
  </div>
  <div
    class="usa-accordion accordion-rr"
    data-allow-multiple="true"
    data-testid="accordion"
  >
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="12345-r:id-0"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_12345-r:id-0"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            class="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_12345-r:id-0"
      hidden=""
      id="12345-r:id-0"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Dates
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            01/04/2020 - Present
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Industry
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            ~industry~
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row flex-column"
        >
          <div
            class="data-title padding-right-1"
          >
            Workplace Information
          </div>
          <div
            class="grid-col width-full text-pre-line p-list"
          >
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Address
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  <span
                    class="text-italic text-base"
                  >
                    No data
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Schedule
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  <span
                    class="text-italic text-base"
                  >
                    No data
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Hours
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  <span
                    class="text-italic text-base"
                  >
                    No data
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Days
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  <span
                    class="text-italic text-base"
                  >
                    No data
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Duties
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  <span
                    class="text-italic text-base"
                  >
                    No data
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Pay Grade
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~pay grade~
                </div>
              </div>
            </div>
            <div>
              <div
                class="grid-row"
              >
                <div
                  class="text-normal data-title padding-right-1"
                >
                  Employment Type
                </div>
                <div
                  class="grid-col maxw7 text-pre-line p-list"
                >
                  ~employment type~
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Hazard
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            <span
              class="text-italic text-base"
            >
              No data
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
